# lrassume

./: .gitignore  .nojekyll  CHANGELOG.html  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DEVELOPMENT.html  README.md  _quarto.yml  development-reflection.html  development-reflection.qmd  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build.yml  deploy.yml  docs.yml  preview-docs.yml  publish-docs.yml  release.yml  test.yml
_site/: CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DEVELOPMENT.html  index.html  search.json
_site/docs/: index.html
_site/reference/: check_homoscedasticity.html  check_independence.html  check_linearity.html  check_multicollinearity_vif.html  index.html
docs/: index.html
reference/: check_homoscedasticity.html  check_homoscedasticity.qmd  check_independence.html  check_independence.qmd  check_linearity.html  check_linearity.qmd  check_multicollinearity_vif.html  check_multicollinearity_vif.qmd  index.html  index.qmd
site_libs/bootstrap/: bootstrap-f10715fc4fe0572af3b3e4d3edfd0ba7.min.css
src/lrassume/: __init__.py  check_homoscedasticity  check_homoscedasticity.py  check_independence.py  check_linearity.py  get_linearly_correlated_features.py
tests/unit/: test_check_homoscedasticity.py  test_check_linearity.py  test_check_multicollinearity.py
tutorials/: getting-started.html  getting-started.qmd  homoscedasticity.html  independence.html  linearity.html  multicollinearity.html
