################################################################################
# Build Configuration
################################################################################
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "lrassume"
dynamic = ["version"]
description = "Checking assumptions for linear regression and similar models"

# Canonical metadata (PEP 621). test
authors = [
  { name = "Tanav Singh Bajaj", email = "tanav.bajaj58@gmail.com" }
]

maintainers = [
  { name = "Tanav Singh Bajaj", email = "tanav.bajaj58@gmail.com" },
  { name = "Harpreet Singh" },
  { name = "Ojasv Issar" },
  { name = "Claire Saunders" }
]

license = { text = "MIT" }
requires-python = ">= 3.10"
readme = { file = "README.md", content-type = "text/markdown" }

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

keywords = [
  "linear-regression",
  "assumptions",
  "regression-diagnostics",
  "statsmodels",
  "statistics"
]

dependencies = ["statsmodels", "numpy", "pandas", "scipy"]

[project.urls]
Homepage = "https://ubc-mds.github.io/lrassume/"
Repository = "https://github.com/UBC-MDS/lrassume"
Issues = "https://github.com/UBC-MDS/lrassume/issues"



[project.optional-dependencies]
# The groups below should be in the [development-groups] table
# They are here now because hatch hasn't released support for them but plans to
# in Mid November 2025.
dev = [
  "hatch",
  "pre-commit",
  "ruff",
  "black"
]

docs = [
  "quartodoc<0.7",
  "griffe<0.37",
  "jupyter"
]

build = [
  "pip-audit",
  "twine"
]

tests = [
  "pytest",
  "pytest-cov",
  "pytest-raises",
  "pytest-xdist"
]

################################################################################
# Versioning (Hatch + VCS)
################################################################################
[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev", local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/lrassume/__version__.py"

################################################################################
# Tool Configuration
################################################################################

# Hatch build configuration
[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/lrassume"]

######## Configure pytest for your test suite ########
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
  "src/lrassume",
  "*/site-packages/lrassume"
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

# Use UV to create Hatch environments
[tool.hatch.envs.default]
installer = "uv"

################################################################################
# Hatch Environments
################################################################################

#--------------- Build and check your package ---------------#
[tool.hatch.envs.build]
description = """Test the installation the package."""
features = ["build"]
detached = true

[tool.hatch.envs.build.scripts]
check = [
  "hatch build {args:--clean}",
  "twine check dist/*"
]

#--------------- Run tests ---------------#
[tool.hatch.envs.test]
description = """Run the test suite."""
features = ["tests"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=lrassume --cov-report=term-missing --cov-report=xml}"

#--------------- Build and preview your documentation ---------------#
[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = [
  "quartodoc build",
  "quarto render docs"
]
serve = [
  "quarto preview docs"
]

#--------------- Check security for your dependencies ---------------#
[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
features = ["build"]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]